# elp-synchronized-stereo-camera-ros-pkg

./: 99-elp-stereo-sync-camera.rules  CMakeLists.txt  README.md  package.xml
calibration/: elp_left.yaml  elp_right.yaml
description/: elp_standalone.urdf.xacro
extra/: elp_stereo_camera.rviz
launch/: .elp_stereo_camera.launch.swp  calibrate.launch  disparity.launch  elp_stereo_camera.launch  point_cloud_rviz_disparity.launch  rviz.launch  stereo_image_proc.launch
scripts/: create_udev_rules.sh
src/: split_sync_images.cpp
