<?xml version="1.0"?>
<package>
  <name>elp_stereo_synchronized_ros_pkg</name>
  <version>0.0.0</version>
  <description>The elp_stereo_synchronized_ros_pkg package</description>
  <maintainer email="monroe.kennedy3@gmail.com">Monroe Kennedy</maintainer>
  <license>GPLv3</license>
  <author email="monroe.kennedy3@gmail.com">Monroe Kennedy</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge </build_depend>
  <build_depend>image_transport </build_depend>
  <build_depend>camera_info_manager </build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>cv_bridge </run_depend>
  <run_depend>image_transport </run_depend>
  <run_depend>camera_info_manager</run_depend>
 


</package>
